Implement auth and encryption

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
       type="image/ico"
       href="favicon.ico"
     />
+
+    <script src="/argon2-bundled.min.js"></script>
+    <script src="/sodium.js"></script>
   </head>
   <body spellcheck="false">
     <!-- quasar:entry-point -->
